--- a/top-common.html
+++ b/top-common.html
@@ -57,7 +57,7 @@
 			</a>
 		</li>
 		<li>
-			<a href="tel:XXX">
+			<a href="tel:18439337122">
 				<p><i class="glyphicon glyphicon-earphone"></i>
 					拨号联系</p>
 			</a>
