--- a/footer-common.html
+++ b/footer-common.html
@@ -40,3 +40,12 @@
 		</div>
 	</div>
 </footer>
+<script>
+	$(function(){
+		$(".move-top").click(function () {
+			var speed=200;//滑动的速度
+			$('body,html').animate({ scrollTop: 0 }, speed);
+			return false;
+		 });
+	})
+</script>
