--- a/top-common.html
+++ b/top-common.html
@@ -4,7 +4,7 @@
 			范县蓝天涂料厂
 		</p>
 		<p class="pull-right">
-			<a><i class="glyphicon glyphicon-earphone"></i>联系电话：0393-5856131</a>
+			<a><i class="glyphicon glyphicon-earphone"></i>联系电话：18236030996</a>
 		</p>
 	</div>
 </div>
@@ -57,7 +57,7 @@
 			</a>
 		</li>
 		<li>
-			<a href="tel:18439337122">
+			<a href="tel:18236030996">
 				<p><i class="glyphicon glyphicon-earphone"></i>
 					拨号联系</p>
 			</a>
