--- a/footer-common.html
+++ b/footer-common.html
@@ -8,8 +8,8 @@
 				<h4>范县蓝天涂料厂</h4>
 				<ul>
 					<li><i class="glyphicon glyphicon-home"></i>公司地址：河南省濮阳市范县杨集吴马厂</li>
-					<li><i class="glyphicon glyphicon-phone-alt"></i>固定电话：0393-5856131</li>
-					<li><i class="glyphicon glyphicon-phone"></i>移动电话：18439337122</li>
+					<li><i class="glyphicon glyphicon-phone-alt"></i>固定电话：0393-5856098</li>
+					<li><i class="glyphicon glyphicon-phone"></i>移动电话：18236030996</li>
 					<li><i class="glyphicon glyphicon-envelope"></i>联系邮箱：1490369541@qq.com</li>
 				</ul>
 			</div>
@@ -30,7 +30,7 @@
 			<div class="gw col-sm-4 col-xs-12">
 				<p>关注我们：</p>
 				<img src="static/images/wx.jpg" />
-				<p>客服热线：0393-5856131</p>
+				<p>客服热线：18236030996</p>
 			</div>
 		</div>
 		<div class="copyright text-center">
