--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<a href="contact.html"><img src="static/images/listcon.jpg"/></a>
 									<ul>
 										<li>公司地址：河南省濮阳市范县杨集吴马厂</li>
-										<li>固定电话：<br />0393-5856131</li>
+										<li>联系电话：18236030996</li>
 										<li>联系邮箱：1490369541@qq.com</li>
 									</ul>
 								</div>
