--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>范县蓝天涂料厂</title>
 		<meta charset="utf-8" />
+		<meta name="description" itemprop="description" content="专注涂料、107胶、外墙漆、加工、销售。" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="static/css/main.css" />
